--- a/_drafts/2020-12-01-plan-for-2021.md
+++ b/_drafts/2020-12-01-plan-for-2021.md
@@ -9,6 +9,7 @@ tags:
 ---
 
 
+possible
 
 
 2020年，把 aws 折腾熟了，不再折腾devops了，开始折腾前端。
@@ -16,6 +17,15 @@ tags:
 把焦点放到架构，业务上，不要在后端继续花费太多时间了。
 
 也不要再雕琢一些细节了。
+
+
+前端
+
+
+python 
+
+Anki 源码
+
 
 
 
