--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -36,6 +36,12 @@ tags:
 - 去 Yumin 的教会闲逛，搞清楚道金斯逻辑缺陷是什么。
 - ~~周六去 James 的教会闲逛，看看是否有所收获。(不适合)~~ 
 
+了解其他宗教
+
+- 佛教
+- 道教
+- 儒家思想
+
 关于信仰的每周自省
 
 - week1 ✔️ 读完了《英国复兴领袖传》怀特菲
@@ -80,9 +86,9 @@ tags:
 - week40《诗篇》10????? Pray 11????? 国庆节，忘记复盘了
 - week41 🔴《诗篇》 11011010 Pray 11011010 规律的作息非常重要，作息只要乱了，就甭指望早起读经祷告了了。最近还是没从过去发生的一些事情中走出来，心里十分苦闷，反而读诗篇的时候开始理解诗人了。
 - week42 《诗篇》 1110111 Pray 1100111
-- week43(WIP) 《诗篇》 11110 Pray 11111 ，顺便读杂书《意义的惊现》 11110。
-- week44
-- week45
+- week43 ✔️《诗篇》 1111010 Pray 1111111 ，读完杂书《意义的惊现》 1111001。
+- week44 ✔️ 箴言 +2 传道书 +1 诗篇 +1 基督教与世界宗教+1 Pray +5
+- week45(WIP)
 - week46
 - week47
 - week48
@@ -145,16 +151,16 @@ tags:
 - week40 锻炼 1000000 \|  早睡 00????? \| 早起 1111111 \|  站立办公2小时 11????? \| 颈椎推拿 0000000  \| 在极客时间买了一个跑步教程，学学看。 00
 - week41 🔴 锻炼 00R00B0 \|  早睡 0000000 \| 早起 0100101 \|  站立办公2小时 0001110 \| 颈椎推拿 000011 \| 跑步教材学习 0000000  (哎，我晚上23点睡觉早晨7点起，与22点睡觉6点起床有什么区别呢？不要再熬夜了）
 - week42 🔴 锻炼 000000R \|  早睡 0101001 \| 早起 1100000 天冷了，起不来了。 \|  站立办公1小时 00101 \| 颈椎推拿 1010 \| 跑步教材学习 0000 \| 鱼油一粒 1111111 \| 一杯水 1111111
-- week43(WIP)  锻炼 0R000 \|  早睡 10100 \| 早起 11110 \|  站立办公1小时 11111 \| 颈椎推拿 10101 \| 跑步教材学习 00000 \| 鱼油一粒 11111 \| 一杯水 11111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 10111
-- week44 
-- week45 
-- week46 
-- week47
-- week48
-- week49
-- week50 
-- week51 
-- week52 
+- week43 ✔️ 锻炼 0🏃0000🥏 \|  早睡 1010001 \| 早起 1111011 \|  站立办公1小时 11111 \| 颈椎推拿 1010111 \| 跑步教材学习 0000000 \| 鱼油一粒 1111111 \| 一杯水 1111111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 10111
+- week44 🔴 锻炼 00000🏃 \|  早睡 1110000  \| 早起 01001 \|  站立办公1小时 11111 \| 颈椎推拿 11000 \| 跑步教材学习 00000 \| 鱼油一粒 111111 \| 一杯水 110111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 01100
+- week45(WIP) 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week46 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week47 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week48 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week49 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week50 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素 
+- week51 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week52 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 
 简写代表的含义
 
@@ -170,9 +176,9 @@ B: badminton
 
 ### 爱妻子
 
-- week43(WIP) Love action 11101  \| Love words 10100 \| 亲密的身体接触 10100 \| 意识到并且感谢妻子的付出 00000
-- week44 
-- week45 
+- week43 Love action 11101  \| Love words 10100 \| 亲密的身体接触 10100 \| 意识到并且感谢妻子的付出 00000
+- week44 ✔️ Love action 1111101  \| Love words 000000 \| 亲密的身体接触 0001101 \| 意识到并且感谢妻子的付出 000000
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -181,17 +187,17 @@ B: badminton
 - week51 
 - week52 
 
-### [增补] 教沐沐圣经故事/原则 [重中之重]
+### [增补] 教沐沐圣经故事和原则3次/周 [重中之重]
 
 李燕提醒：根基的建造比学业更重要，因为果效会持续一生。敬畏耶和华是智慧的开端。
 
 - week39 ✔️ 1101011 \| 买了报佳音上一些不错的绘本
 - week40 ???????
-- week41 ?100110
-- week42 0101???
-- week43(WIP) 101
-- week44 
-- week45 
+- week41 ✔️ ?100110
+- week42 🔴 0101???
+- week43 🔴 101
+- week44 ✔️ 111
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -225,9 +231,9 @@ B: badminton
 - week40 ？
 - week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，一闪一闪，晚上可以让车子注意到他。
 - week42 (新)负责家里的垃圾倾倒
-- week43(WIP) 收拾碗筷 | 扔垃圾
-- week44 
-- week45 
+- week43 收拾碗筷 | 扔垃圾
+- week44 ✔️ 扔垃圾两次/收拾盘子 （这周阿姨扔垃圾次数太多了，下周要提醒阿姨交给沐沐）
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -254,9 +260,9 @@ B: badminton
 - week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
 - week41 每天早晨复习英文 111111
 - week42 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \| (外教课上维持秩序真的好难啊，还是要和外教说明白1个月后，课堂秩序的维护交给她，而不是我。要不然太花时间了。）
-- week43(WIP) 叽里呱啦/洪恩英语/youtube kids 11 \| 外教到家授课 0101000 \| 购买外教老师推荐的 Farfaria 50美元
-- week44 
-- week45 
+- week43 叽里呱啦/洪恩英语/youtube kids 11 \| 外教到家授课 0101000 \| 购买外教老师推荐的 Farfaria 50美元
+- week44 YouTube Kids +7, Farfaria +1, 洪恩英语 Panda
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -291,9 +297,9 @@ B: badminton
 - week40 ✔️ 早晨复习汉字（国庆节也是要求他 7 点起床，他已经越来越习惯了）
 - week41 ????01 (周五他学习吊儿郎当，丈打一次）
 - week42 洪恩识字 睡/累
-- week43(WIP) 
-- week44 
-- week45 
+- week43 
+- week44 认识新字： 台，视 复习：窗，间，饿
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -320,9 +326,9 @@ B: badminton
 - week40 🔴 No progress
 - week41 ✔️ 沐沐开始去游乐场卖货了，这算是一种形式的锻炼数学的能力吧，活学活用。
 - week42 🔴 No progress
-- week43(WIP) 
-- week44 
-- week45 
+- week43 
+- week44 ✔️ Khan Academy big/small
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -350,9 +356,9 @@ B: badminton
 - week40 周一送沐沐上学，老师说要降低学业的时间的投入，多带沐沐出去玩一玩，沐沐在学校很乖，但是很安静，也不举手发言。 \| 沐沐在外面玩时，歇斯底里了一次，并攻击另外一个大人和我。要查查资料，教他认识自己的情绪 TODO [ ] \| 周六和皓天一起去卖玻璃水
 - week41 周三带沐沐去油管艺术中心卖魔术甩棒，赚了16块钱。
 - week42 周一晚上去万科卖竹蜻蜓，沐沐赚了4块钱 / 周六去外滩卖魔术甩棒
-- week43(WIP) 周三去万科卖竹蜻蜓，下雨了，啥也没卖出去
-- week44 
-- week45 
+- week43 周三去万科卖竹蜻蜓，下雨了，啥也没卖出去
+- week44 毫无进展
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -398,9 +404,9 @@ B: badminton
 - week40 ✔️ 和奶奶聊了聊天，她和爷爷单独住在一座房子里挺开心的。如果住在一起，有婆媳矛盾，反而不舒服。
 - week41 🔴
 - week42 ✔️ 和奶奶聊了聊天
-- week43(WIP) ✔️ 和奶奶聊了聊天，她说爷爷喜欢吃排骨。以后每个月京东买点寄回去。
-- week44 
-- week45 
+- week43 ✔️ 和奶奶聊了聊天，她说爷爷喜欢吃排骨。以后每个月京东买点寄回去。 \| 我妈又抱怨我姑姑的懒惰了。两个人真是让人疲倦。一个心胸狭窄，一个成年巨婴。
+- week44 ✔️ 周日给爸爸妈妈打电话。但是忘记给奶奶打电话了，周一再打吧。
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -418,8 +424,8 @@ B: badminton
 - July. 🔴
 - Aug. ✔️
 - Sept. 🔴
-- Oct.
-- Nov.
+- Oct. 🔴
+- Nov. ✔️ 给妈妈买了康复的椭圆仪，给爸爸妈妈爷爷奶奶买了4斤排骨。
 - Dec.
 
 ### 拿到驾照 ✔️
@@ -497,9 +503,9 @@ B: badminton
 
 ### 1. Review Anki everyday
 
-- week43(WIP) 1111
-- week44 
-- week45 
+- week43 1111110
+- week44 ✔️ 1101110
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -555,9 +561,9 @@ B: badminton
 - week40 on vacation
 - week41 on vacation. 一个决心：Daniel / Vincent 中英文都很流利，但是以后开会我们决定都说英文，这样我可以练习英文，和客户以及partner沟通的时候不至于发怵。
 - week42 ✔️ talk with Daniel, Talk with Rob 自从和 Daniel and Vincent 用英文开会以来，效果非常显著。
-- week43(WIP) ✔️ talk with Daniel / Vincent 
-- week44 
-- week45 
+- week43 ✔️ talk with Daniel / Vincent 
+- week44✔️ Talk with Daniel / Vincent / Daniel
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -609,9 +615,9 @@ B: badminton
 - week40 ✔️ VPC: Network ACLs
 - week41 ✔️ VPC endpoints: interface endpoint, gateway endpoints
 - week42 🔴 not too much progress
-- week43(WIP) ✔️ Review VPC / Learn Disaster Recovery / Learn IAM again
-- week44 
-- week45 
+- week43 ✔️ Review VPC / Learn Disaster Recovery / Learn IAM again
+- week44 ✔️ SNS fanout / Kinesis / Play IAM policy in the wild.
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -660,9 +666,9 @@ B: badminton
 - week40 🔴 expected no progress
 - week41 🔴 expected no progress
 - week42 🔴 expected no progress
-- week43(WIP) 🔴 expected no progress
-- week44 
-- week45 
+- week43 🔴 expected no progress
+- week44 🔴 expected no progress
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -720,9 +726,9 @@ B: badminton
 - week40 on vacation
 - week41 on vacation
 - week42 SAML SSO / Help Rainux to onboard
-- week43(WIP) Performance tuning
-- week44 
-- week45 
+- week43 Performance tuning
+- week44 fix a calendar bug / discuss microservice / look for an office.
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -770,9 +776,9 @@ B: badminton
 
 <!---### 0.帮助两个好朋友
 
-- week43(WIP) 邀请 Ta 来家里吃饭。 \| talk with them
-- week44 
-- week45 
+- week43 邀请 Ta 来家里吃饭。 \| talk with them
+- week44 No progress.
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -801,7 +807,8 @@ B: badminton
 - 2020-08-29 ✔️ 小梅/吕小荣/冯阿姨一起带娃：颜言，葡萄，沐沐
 - 2020-09-11 ✔️ 周五小组查经在我家，招待向文/黄田/小蓝/晓晓/若郎晚饭
 - 2020-09-26 ✔️ 周六下午招待改改/果果/梁立波/悠悠/小梅/核桃/板栗，一起吃晚饭。
-- 2020-10-01 ✔️ 国庆节请乐意和涂涂来家里吃大闸蟹
+- 2020-10-01 ✔️ 国庆节请乐意和涂涂来家里吃大闸蟹。
+- 2020-10-24 ✔️ 全家人和关关一家逛 Costco，和关关喝咖啡，请他们来家里吃螃蟹和烤羊排。
 - Oct.
 - Nov.
 - Dec.
@@ -839,9 +846,9 @@ B: badminton
 - week40 on Vacation
 - week41 on Vacation
 - week42 ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
-- week43(WIP) 向文因为工作的事情心情不太好。
-- week44 
-- week45 
+- week43 向文因为工作的事情心情不太好。
+- week44 🔴 晚上要面试别人，和祷告会冲突，这周取消
+- week45(WIP) 
 - week46 
 - week47
 - week48
@@ -864,7 +871,7 @@ B: badminton
 - July. 🔴 failed
 - Aug. 🔴 failed
 - Sept. 🔴 failed
-- Oct. 2020-10-18 和吕林哥哥聊天
+- Oct. 2020-10-18 和吕林哥哥聊天 ✔️
 - Nov.
 - Dec.
 
@@ -893,6 +900,7 @@ B: badminton
 	- 送 Derek 量化交易的书籍。不过我不赞成普通人去做量化交易，警惕乌尔冈湖效应。✔️
 	- 送琳琳姑姑圣经 ✔️
 	- 送冯阿姨的儿子《欲罢不能》✔️
+	- 送吴琼《非暴力沟通》✔️
 
 
 ### 6. 每个季度带领小组梳理宜山小组的计划，每年和小组成员沟通，一起讨论下一年的计划。
@@ -960,6 +968,7 @@ B: badminton
 ### 1. 组织 Ruby 上海地区的线下聚会
 
 - week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
+- week45(WIP) 吕戈讲 Rust
 
 ### 2. 参与到开源项目 TiDB 数据库中。
 
