--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -88,8 +88,8 @@ tags:
 - week42 《诗篇》 1110111 Pray 1100111
 - week43 ✔️《诗篇》 1111010 Pray 1111111 ，读完杂书《意义的惊现》 1111001。
 - week44 ✔️ 箴言 +2 传道书 +1 诗篇 +1 基督教与世界宗教+1 Pray +5
-- week45(WIP)
-- week46
+- week45 🔴 天太冷了，起不了床，就2天起来读圣经了。
+- week46(WIP)
 - week47
 - week48
 - week49
@@ -153,8 +153,8 @@ tags:
 - week42 🔴 锻炼 000000R \|  早睡 0101001 \| 早起 1100000 天冷了，起不来了。 \|  站立办公1小时 00101 \| 颈椎推拿 1010 \| 跑步教材学习 0000 \| 鱼油一粒 1111111 \| 一杯水 1111111
 - week43 ✔️ 锻炼 0🏃0000🥏 \|  早睡 1010001 \| 早起 1111011 \|  站立办公1小时 11111 \| 颈椎推拿 1010111 \| 跑步教材学习 0000000 \| 鱼油一粒 1111111 \| 一杯水 1111111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 10111
 - week44 🔴 锻炼 00000🏃 \|  早睡 1110000  \| 早起 01001 \|  站立办公1小时 11111 \| 颈椎推拿 11000 \| 跑步教材学习 00000 \| 鱼油一粒 111111 \| 一杯水 110111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 01100
-- week45(WIP) 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
-- week46 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week45 🔴 锻炼 00R  \|  早睡 000 \| 早起 0000  本周最大的挑战，天越来越冷，早晨六点压根起不来。放个大的羽绒服在床边，起床后不要脱睡衣，直接裹上羽绒服。
+- week46(WIP) 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 1 \| 一杯水 1 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week47 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week48 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week49 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
@@ -178,8 +178,8 @@ B: badminton
 
 - week43 Love action 11101  \| Love words 10100 \| 亲密的身体接触 10100 \| 意识到并且感谢妻子的付出 00000
 - week44 ✔️ Love action 1111101  \| Love words 000000 \| 亲密的身体接触 0001101 \| 意识到并且感谢妻子的付出 000000
-- week45(WIP) 
-- week46 
+- week45 我一开车就变成一个乱发脾气的怪兽了，让她闭嘴，他很生气。得想办法解决这个问题。
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -197,8 +197,8 @@ B: badminton
 - week42 🔴 0101???
 - week43 🔴 101
 - week44 ✔️ 111
-- week45(WIP) 
-- week46 
+- week45 🔴 1
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -233,8 +233,8 @@ B: badminton
 - week42 (新)负责家里的垃圾倾倒
 - week43 收拾碗筷 | 扔垃圾
 - week44 ✔️ 扔垃圾两次/收拾盘子 （这周阿姨扔垃圾次数太多了，下周要提醒阿姨交给沐沐）
-- week45(WIP) 
-- week46 
+- week45 🔴
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -258,12 +258,12 @@ B: badminton
 - week38 ✔️ /w/ /r/ /æ/ /t/，沐沐比较喜欢洪恩英语，买了1年会员先试试。每天早晨花10分钟一起和沐沐复习英文
 - week39 ✔️ 每天早晨复习英文 1111001 \| 这一周学习的新内容太少了，以后放学后的时间让他学新内容吧。
 - week40 ✔️ 每天早晨复习英文 \| 给沐沐报了一个外教课，他的同学在我家里上课，比较省心。
-- week41 每天早晨复习英文 111111
-- week42 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \| (外教课上维持秩序真的好难啊，还是要和外教说明白1个月后，课堂秩序的维护交给她，而不是我。要不然太花时间了。）
-- week43 叽里呱啦/洪恩英语/youtube kids 11 \| 外教到家授课 0101000 \| 购买外教老师推荐的 Farfaria 50美元
-- week44 YouTube Kids +7, Farfaria +1, 洪恩英语 Panda
-- week45(WIP) 
-- week46 
+- week41 ✔️ 每天早晨复习英文 111111
+- week42 ✔️ 叽里呱啦（洪恩英语） 11 \| 外教到家授课 0101000 \| (外教课上维持秩序真的好难啊，还是要和外教说明白1个月后，课堂秩序的维护交给她，而不是我。要不然太花时间了。）
+- week43 ✔️ 叽里呱啦/洪恩英语/youtube kids 11 \| 外教到家授课 0101000 \| 购买外教老师推荐的 Farfaria 50美元
+- week44 ✔️ YouTube Kids +7, Farfaria +1, 洪恩英语 Panda
+- week45 ✔️ YouTube Kids +7, 叽里呱啦 +1, Khan Academy +2
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -299,8 +299,8 @@ B: badminton
 - week42 洪恩识字 睡/累
 - week43 
 - week44 认识新字： 台，视 复习：窗，间，饿
-- week45(WIP) 
-- week46 
+- week45 🔴 没怎么学汉字
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -328,8 +328,8 @@ B: badminton
 - week42 🔴 No progress
 - week43 
 - week44 ✔️ Khan Academy big/small
-- week45(WIP) 
-- week46 
+- week45 🔴 这周没学数学
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -358,8 +358,8 @@ B: badminton
 - week42 周一晚上去万科卖竹蜻蜓，沐沐赚了4块钱 / 周六去外滩卖魔术甩棒
 - week43 周三去万科卖竹蜻蜓，下雨了，啥也没卖出去
 - week44 毫无进展
-- week45(WIP) 
-- week46 
+- week45 
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -376,6 +376,7 @@ B: badminton
 
 - week26 周四-周六：关关/吴琼/若郎/向文/刘小坤/吕小荣 去莫干山旅游。
 - week40 and week41 10.2 青西郊野公园 \| 10.3 去大叔家 \|  10.6 去滴水湖
+- week45 和小组一起去淀山湖玩，晚上和沐沐一张床，没睡好。下次还是早点睡，不要和年轻人熬夜。一，开车非常累，二，年纪大了，已经有了生物钟，不要轻易变换。
 
 ### 每个季度回济南看望爷爷奶奶和爸爸妈妈
 
@@ -406,8 +407,8 @@ B: badminton
 - week42 ✔️ 和奶奶聊了聊天
 - week43 ✔️ 和奶奶聊了聊天，她说爷爷喜欢吃排骨。以后每个月京东买点寄回去。 \| 我妈又抱怨我姑姑的懒惰了。两个人真是让人疲倦。一个心胸狭窄，一个成年巨婴。
 - week44 ✔️ 周日给爸爸妈妈打电话。但是忘记给奶奶打电话了，周一再打吧。
-- week45(WIP) 
-- week46 
+- week45 ✔️ 和爸爸打电话了，没有和奶奶打电话。
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -425,7 +426,7 @@ B: badminton
 - Aug. ✔️
 - Sept. 🔴
 - Oct. 🔴
-- Nov. ✔️ 给妈妈买了康复的椭圆仪，给爸爸妈妈爷爷奶奶买了4斤排骨。
+- Nov. ✔️ 给妈妈买了康复的椭圆仪锻炼身体，给爸爸妈妈爷爷奶奶买了4斤排骨。
 - Dec.
 
 ### 拿到驾照 ✔️
@@ -460,6 +461,12 @@ B: badminton
 	- 还是不太会使用后视镜/反光镜来判断车距 TODO [ ]
 	- 环形岛不太会过。TODO [ ]
 
+- week45 开车去淀山湖的收获
+	- 需要配一副偏光的太阳镜，太阳太强烈照到路面睁不开眼睛的时候，可以缓解。压了一次实线，闯了一次红绿灯。（希望没有被拍到）
+	- 还是要多开车，开得多了，就有经验了。训练次数太少，即使效率很高，经验值依然上不去。
+	- 车速拍照
+	- 高德的靠左侧行驶是说前方有岔路。
+	- 高德经常提醒的违章拍照是什么意思？ 
 ![](https://mednoter.com/media/files/2020/2020-08-08_15-15-02.jpg)
 
 ### 保持财务健康
@@ -505,8 +512,8 @@ B: badminton
 
 - week43 1111110
 - week44 ✔️ 1101110
-- week45(WIP) 
-- week46 
+- week45 
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -563,8 +570,8 @@ B: badminton
 - week42 ✔️ talk with Daniel, Talk with Rob 自从和 Daniel and Vincent 用英文开会以来，效果非常显著。
 - week43 ✔️ talk with Daniel / Vincent 
 - week44✔️ Talk with Daniel / Vincent / Daniel
-- week45(WIP) 
-- week46 
+- week45 ✔️
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -617,8 +624,8 @@ B: badminton
 - week42 🔴 not too much progress
 - week43 ✔️ Review VPC / Learn Disaster Recovery / Learn IAM again
 - week44 ✔️ SNS fanout / Kinesis / Play IAM policy in the wild.
-- week45(WIP) 
-- week46 
+- week45 🔴 No Progress
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -668,8 +675,8 @@ B: badminton
 - week42 🔴 expected no progress
 - week43 🔴 expected no progress
 - week44 🔴 expected no progress
-- week45(WIP) 
-- week46 
+- week45 🔴 expected no progress
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -728,8 +735,8 @@ B: badminton
 - week42 SAML SSO / Help Rainux to onboard
 - week43 Performance tuning
 - week44 fix a calendar bug / discuss microservice / look for an office.
-- week45(WIP) 
-- week46 
+- week45 fix calendar bug / HIREtech integration / Help new engineer on board
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -778,8 +785,8 @@ B: badminton
 
 - week43 邀请 Ta 来家里吃饭。 \| talk with them
 - week44 No progress.
-- week45(WIP) 
-- week46 
+- week45 
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -848,8 +855,8 @@ B: badminton
 - week42 ✔️ 周三晚上和向文一起聊天，他指出我应该停止过度反思，心大一点，没心没肺一点。对于我是非常大的帮助。
 - week43 向文因为工作的事情心情不太好。
 - week44 🔴 晚上要面试别人，和祷告会冲突，这周取消
-- week45(WIP) 
-- week46 
+- week45 🔴
+- week46(WIP) 
 - week47
 - week48
 - week49
@@ -968,7 +975,7 @@ B: badminton
 ### 1. 组织 Ruby 上海地区的线下聚会
 
 - week37 组织一次，并且申请了 Jetbrains 的兑换码作为奖品。
-- week45(WIP) 吕戈讲 Rust
+- week45 吕戈讲 Rust
 
 ### 2. 参与到开源项目 TiDB 数据库中。
 
