--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -89,7 +89,7 @@ tags:
 - week43 ✔️《诗篇》 1111010 Pray 1111111 ，读完杂书《意义的惊现》 1111001。
 - week44 ✔️ 箴言 +2 传道书 +1 诗篇 +1 基督教与世界宗教+1 Pray +5
 - week45 🔴 天太冷了，起不了床，就2天起来读圣经了。
-- week46(WIP)
+- week46(WIP) 《耶稣真貌》+2 Pray +2
 - week47
 - week48
 - week49
@@ -154,7 +154,7 @@ tags:
 - week43 ✔️ 锻炼 0🏃0000🥏 \|  早睡 1010001 \| 早起 1111011 \|  站立办公1小时 11111 \| 颈椎推拿 1010111 \| 跑步教材学习 0000000 \| 鱼油一粒 1111111 \| 一杯水 1111111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 10111
 - week44 🔴 锻炼 00000🏃 \|  早睡 1110000  \| 早起 01001 \|  站立办公1小时 11111 \| 颈椎推拿 11000 \| 跑步教材学习 00000 \| 鱼油一粒 111111 \| 一杯水 110111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 01100
 - week45 🔴 锻炼 00R  \|  早睡 000 \| 早起 0000  本周最大的挑战，天越来越冷，早晨六点压根起不来。放个大的羽绒服在床边，起床后不要脱睡衣，直接裹上羽绒服。
-- week46(WIP) 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 1 \| 一杯水 1 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week46(WIP) 锻炼 0R \|  早睡 10  \| 早起 11 \|  站立办公1小时 11 \| 颈椎推拿 01 \| 跑步教材学习 00 \| 鱼油一粒 11 \| 一杯水 11 \| 工作50分钟休息10分钟 1 \| 饭后漱口 11 \| 吃饭要慢(>15分钟) 1 \| 晚上吃素 10
 - week47 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week48 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week49 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
@@ -231,7 +231,7 @@ B: badminton
 - week40 ？
 - week41 和刘小坤/沐沐协商，沐沐负责倒垃圾。我给他买了个警示灯，一闪一闪，晚上可以让车子注意到他。
 - week42 (新)负责家里的垃圾倾倒
-- week43 收拾碗筷 | 扔垃圾
+- week43 收拾碗筷 \| 扔垃圾
 - week44 ✔️ 扔垃圾两次/收拾盘子 （这周阿姨扔垃圾次数太多了，下周要提醒阿姨交给沐沐）
 - week45 🔴
 - week46(WIP) 
