--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -8,22 +8,25 @@ tags:
   -
 ---
 
-我受洗六年了，在教会已经有八年了，在这个过程中经历了形形色色的事情。
+我在教会已经有八年了，在这个过程中经历了形形色色的事情。
+
+曾经一起服侍的小组同工，有一天对我说他不再相信基督教了。
+
+一些大学团契的领袖毕业后，就再也没有在教会里出现过。
 
 婚姻辅导书籍《不再约会》的作者放弃了自己的基督教信仰。
 
-教会里一些性格乖戾的基督徒，伤害别人也不以为意，对自己没有自知之明。
-
-曾经一起服侍的小组同工，有一天对我说他不再相信基督教了。
+教会里一些性格乖戾的人，伤害别人也不以为意，对自己没有自知之明。
 
 我还听闻上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
 
 教会里的人到底有多少人得救呢？谁知道呢，但是肯定不多。
 
-有些人来是因为太孤独了，需要社交。有些人来教会是一种习惯；有些人因为配偶的强迫；有些人来是因为教会有家的感觉，温暖。
+有些人来是因为太孤独了，需要朋友。有些人来教会是一种习惯；有些人因为配偶的强迫；有些人来是因为教会有家的感觉，温暖。有多少人是因为耶稣呢？
 
-我来教会是为了什么呢？
+即使嘴上说来教会是因为耶稣，心里就真的明白吗？
 
+我就是那个不明白的人。
 
 ## 检验自己的信仰
 
@@ -153,7 +156,9 @@ tags:
 
 我也会看古典的无神论的书籍，看看和新无神论有什么区别。
 
-结局可能是好的，也可能是不好的。一种可能是，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。糟糕的结局可能是自杀，或者没有勇气自杀，苟且的活着，让忙碌淹没自己的胡思乱想。
+结局可能是好的，也可能是不好的。一种可能是，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。糟糕的结局没有勇气自杀，苟且的活着，让忙碌淹没自己的胡思乱想。不过如果万事都毫无意义，结局也没有好坏之分了。
 
-不过如果万事都毫无意义，结局也没有好坏之分了。
+我以后对自己的定位是一个基督教慕道友，而不是基督徒。当认清自己后，我反而轻松了许多，担子终究卸了下来，重新踏上真理探索之路了。
+
+是的，可以努力向前了。
 
