--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -39,7 +39,7 @@ tags:
 
 做基督徒这么多年，我并不觉得在品格上有哪些长进。即使有长进也肯能归功于年纪大了，三十而立，四十不惑，谁还没有点长进呢。 
 
-两本书把所有的确据中排在最前面的，是得救之人对耶稣都有爱慕之情。
+两本书把所有的确据中排在最前面的是对耶稣有爱慕之情。
 
 是啊，如果一个人真的相信自己是一无是处，罪行累累，该下到地狱里去，面对拯救者怎么会毫无感激之情。
 
@@ -100,27 +100,6 @@ tags:
 
 如果它真的存在，将来有一天，当我再次向它而生时，我希望是因为看到了它的光辉，而不是对黑暗感到恐惧。
 
-## 回答一些言论
-
-**有人说 “你今年怎么不怎么服侍了？”**
-
-真理的光芒构建了人生观和价值观，然后自然带出行为。
-
-我的服侍没办法超过神对我的光照程度。
-
-**有人说 “你只管信”。**
-
-我虽然对宗教史不熟悉，基于犹太教分化出基督教，然后分化出伊斯兰教。
-
-基督教中有有改革宗，基要派，贵格会，加尔文主义，阿米念主义等等。每一派都觉得自己最正确无误。我为什么要相信你是正确的？你凭什么百分百觉得自己就正确呢。
-
-历史上的十字军东征的将士，不就是愚信的后果吗。
-
-**有人说，很多基督徒在死亡时，非常的祥和，他们并不畏惧死亡，只有真信仰才会这样。**
-
-死亡时感到平静和祥和，毫无畏惧，并不能说明自己信仰是真理。那些自杀式袭击的伊斯兰教徒对自己的信仰也是这么坚定。
-
-
 ## 我准备如何探寻真理
 
 世界的本质是什么？
@@ -162,3 +141,28 @@ tags:
 
 是的，可以努力向前了。
 
+## 回答一些言论
+
+**有人说 “你的本性发生了很大的变化，很可能得救了”**
+
+《富兰克林自传》中他不断操练自己的品格，贵格会的人也不断操练自己的品格，终归会有长进。
+
+但富兰克林是自然神论。
+
+**有人说 “你只管信”。**
+
+我虽然对宗教史不熟悉，基于犹太教分化出基督教，然后分化出伊斯兰教。
+
+基督教中有有改革宗，基要派，贵格会，加尔文主义，阿米念主义等等。每一派都觉得自己最正确无误。我为什么要相信你是正确的？你凭什么百分百觉得自己就正确呢。
+
+历史上的十字军东征的将士，不就是愚信的后果吗。
+
+**有人说，很多基督徒在死亡时，非常的祥和，他们并不畏惧死亡，只有真信仰才会这样。**
+
+死亡时感到平静和祥和，毫无畏惧，并不能说明自己信仰是真理。那些自杀式袭击的伊斯兰教徒对自己的信仰也是这么坚定。
+
+**有人说 “你今年怎么不怎么服侍了？”**
+
+真理的光芒构建了人生观和价值观，然后自然带出行为。
+
+我的服侍没办法超过神对我的光照程度。
