--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -135,6 +135,14 @@ tags:
 
 我也会看古典的无神论的书籍，看看和新无神论有什么区别。
 
+我要提防什么呢？
+
+有些房子没检查地基，有可能是盖在沙土上的，过几年偶尔有个地震，就全部倒塌了。
+
+房子的款式可能有很多，那些最流行的款式，可能抄袭了100年前的结构，只是刷了个不一样的油漆罢了。
+
+这条探索之路的结局如何？
+
 结局可能是好的，也可能是不好的。一种可能是，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。糟糕的结局没有勇气自杀，苟且的活着，让忙碌淹没自己的胡思乱想。不过如果万事都毫无意义，结局也没有好坏之分了。
 
 我以后对自己的定位是一个基督教慕道友，而不是基督徒。当认清自己后，我反而轻松了许多，担子终究卸了下来，重新踏上真理探索之路了。
@@ -147,7 +155,7 @@ tags:
 
 《富兰克林自传》中他不断操练自己的品格，贵格会的人也不断操练自己的品格，终归会有长进。
 
-但富兰克林是自然神论。
+但富兰克林深受清教徒影响的自然神论者，实用主义者。
 
 **有人说 “你只管信”。**
 
