--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -20,26 +20,26 @@ tags:
 
 我还听闻上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
 
-教会里的人到底有多少人得救呢？谁知道呢，但是肯定不多。
+教会里的人到底有多少人得救呢？
 
-有些人来是因为太孤独了，需要朋友。有些人来教会是一种习惯；有些人因为配偶的强迫；有些人来是因为教会有家的感觉，温暖。有多少人是因为耶稣呢？
+有些人是因为父母是基督徒，他生而为基督徒。有些人来教会是一种习惯；有些人因为配偶的强迫；有些人来是因为教会有家的感觉，温暖。有些人来是因为太孤独了，需要朋友。有些人是因为基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。
 
-即使嘴上说来教会是因为耶稣，心里就真的明白吗？
+真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。
 
-我就是那个不明白的人。
+有多少人是因为真理和道路？即使嘴上说渴慕真理，渴慕耶稣，心里就真的是渴慕吗？
+
+我就是那个不明白的人。我因为害怕生命没有意义，才相信基督教。
 
 ## 检验自己的信仰
 
-让我停下来反思自己信仰状态的是《宗教情感》和《圣洁》这两本书。书上说得救之人的确据有：
+《宗教情感》和《圣洁》这两本书上说得救之人的确据有：
 
 - 人改变本性
 - 渴慕圣洁的事情
 - 好的性情，谦卑，温柔，怜悯
 - 等等。
 
-做基督徒这么多年，我并不觉得在品格上有哪些长进。即使有长进也肯能归功于年纪大了，三十而立，四十不惑，谁还没有点长进呢。 
-
-两本书把所有的确据中排在最前面的是对耶稣有爱慕之情。
+两本书在一大堆的清单之前，加了一个前置条件：对耶稣有爱慕之情。
 
 是啊，如果一个人真的相信自己是一无是处，罪行累累，该下到地狱里去，面对拯救者怎么会毫无感激之情。
 
