--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -65,9 +65,7 @@ tags:
 
 首先是认清世界的实质是什么；其次是基于世界的实质去过自己的一生。
 
-如果世界的实质是虚无的，没有神，一切皆无意义，”物竞天择，适者生存“，“道德是种群的一种互相帮助策略”，那要在虚无中选择一套的人生活法。
-
-（如果人世间一切毫无意义，良善和邪恶都是被允许的。我不知道我为什么一定要坚持按照良善过自己的一生。这是以后很好的思考的点。）
+如果世界的实质是虚无的，没有神，一切皆无意义，”物竞天择，适者生存“，“道德是种群的一种互相帮助策略”，那要在虚无中选择一套的人生活法。（反驳自己：如果人世间一切毫无意义，良善和邪恶都是被允许的。你为什么要坚持道德。）
 
 如果真理是，神造了天地之后，就不管我们了，那么我们就为自己创造一个意义，然后用那个意义过完此生。
 
