--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -10,25 +10,25 @@ tags:
 
 我在教会已经有八年了，在这个过程中经历了形形色色的事情。
 
-曾经一起服侍的小组同工，有一天对我说他不再相信基督教了。
+曾经一起服侍的小组同工，有一天对我说他不再相信基督教了；
 
-一些大学团契的领袖毕业后，就再也没有在教会里出现过。
+一些大学团契的领袖毕业后，就再也没有在教会里出现过；
 
-婚姻辅导书籍《不再约会》的作者放弃了自己的基督教信仰。
+婚姻辅导书籍《不再约会》的作者放弃了自己的基督教信仰；
+
+一些受洗见证讲的痛哭流涕的，在教会里寻不见踪影；
 
 教会里一些性格乖戾的人，伤害别人也不以为意，对自己没有自知之明。
 
 我还听闻上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
 
-教会里的人到底有多少人得救呢？
-
-有些人是因为父母是基督徒，他生而为基督徒。有些人来教会是一种习惯；有些人因为配偶的强迫；有些人来是因为教会有家的感觉，温暖。有些人来是因为太孤独了，需要朋友。有些人是因为基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。
+还在坚持的人，也有一些是稀里糊涂的跟着习惯在走。有些人来教会是一种习惯；有些人因为配偶；有些人是因为教会有家的温暖；有些人来是因为太孤独了，需要朋友。有些人是因为信基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。
 
 真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。
 
 有多少人是因为真理和道路？即使嘴上说渴慕真理，渴慕耶稣，心里就真的是渴慕吗？
 
-我就是那个不明白的人。我因为害怕生命没有意义，才相信基督教。
+我就是那个不明白福音的人。我因为害怕生命没有意义，才相信基督教。
 
 ## 检验自己的信仰
 
@@ -100,13 +100,7 @@ tags:
 
 ## 我准备如何探寻真理
 
-世界的本质是什么？
-
-真理是什么？
-
-道德有意义吗？还是生物互相帮助的一种本能？道德是相对的，还是绝对的？如果是相对的为什么要强求自己？基于真理的的道德观是什么？
-
-探明真理必定要花上几年或一生的时间，在没有获得真理之前，必定需要一个临时的过渡方案来生活。就像鉴笛卡尔一样，在没有建好新房子之前，先住在宽敞明亮旧房子里。
+探明真理必定要花上几年或一生的时间，在没有获得真理之前，必定需要一个临时的过渡方案来指导生活。我决定采用笛卡尔的方式，在没有建好新房子之前，先住在已有的旧房子里。然而旧房子的一切都是值得怀疑的，边拆边建。
 
 我的旧房子是：
 
@@ -129,15 +123,15 @@ tags:
 
 我也要去翻翻哲学和神学的书籍，读康德，克尔凯郭尔等等，看他们如何批判宗教又是如何护教。
 
-我也会去看新无神论的书籍 《自私的基因》《机器人叛乱》，他们既然宣扬虚无主义，又要如何解决虚无主义导致的道德真空呢？
+我也会再次去看看新无神论的书籍 《自私的基因》《机器人叛乱》，他们既然宣扬虚无主义，又要如何解决虚无主义导致的道德真空呢。
 
 我也会看古典的无神论的书籍，看看和新无神论有什么区别。
 
 我要提防什么呢？
 
-有些房子没检查地基，有可能是盖在沙土上的，过几年偶尔有个地震，就全部倒塌了。
+有些房子地基如何，有没有可能是盖在沙土上，偶尔有个地震，就全部倒塌了。
 
-房子的款式可能有很多，那些最流行的款式，可能抄袭了100年前的结构，只是刷了个不一样的油漆罢了。
+房子的款式可能有很多，有些可能很流行，但并不是新鲜货。可能抄袭了100年前的结构，只是刷了个不一样的油漆罢了。
 
 这条探索之路的结局如何？
 
@@ -151,9 +145,9 @@ tags:
 
 **有人说 “你的本性发生了很大的变化，很可能得救了”**
 
-《富兰克林自传》中他不断操练自己的品格，贵格会的人也不断操练自己的品格，终归会有长进。
+《富兰克林自传》写到，他一生都在不断操练自己的品格，但富兰克林深受清教徒影响的自然神论者，实用主义者。
 
-但富兰克林深受清教徒影响的自然神论者，实用主义者。
+即使有长进也可能归功于年纪大了，三十而立，四十不惑，谁还没有点长进呢。 
 
 **有人说 “你只管信”。**
 
