--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -82,21 +82,21 @@ tags:
 
 人生所有的谜题，圣经皆有答案，而且充满了道德美感。
 
-谈到处事为人，它说要诚实，怜悯，公正。谈到穷人，它说要怜悯别人，自己也必蒙怜悯。谈到家庭，它说丈夫要爱自己的妻子，要教养自己的孩子走义路。
+谈到处事为人，它说要诚实公正。谈到穷人，它说要怜悯别人，自己也必蒙怜悯。谈到家庭，它说丈夫要爱自己的妻子，要教养自己的孩子走义路。
 
-以圣经为内核，可以塑造系统的家庭观，金钱观，工作观。人站在太阳的光辉里时，整个身体都是温暖的。
+以圣经为内核，可以塑造系统的家庭观，金钱观，工作观。犹如站在太阳的光辉里时，整个身体都是温暖的。
 
-但假如这个世界本没有太阳，而是一片沉寂和黑暗。沉寂和黑暗中，人们忙忙碌碌，日复一日，年复一年，这是何等的凄凉。
+但假如这个太阳是幻觉，世界就是一片沉寂和黑暗，人们忙忙碌碌，日复一日，年复一年，这是何等的凄凉。
 
-几年前我没有勇气面对这种黑暗，就对自己说“很多人都感觉有太阳，你努力看，说不定就真的觉得有太阳了。如果感受不到，就再更努力的去感受”。
+几年前我没有勇气面对这种黑暗，就对自己说“很多人有太阳，你努力看，说不定就能感受到太阳了。如果感受不到，就再更努力一点”。
 
-有时候我会对太阳哭泣，说求你灼伤我吧。如果你灼伤我，至少能让我感知到你的存在，以后就向你而生，然而你总是静默无言。
+我感受不到。即使能感受到一点点热度，也不知道那是太阳的光辉，还是小概率的随机事件。
 
-太阳真的存在吗？如果那太阳是虚假的，什么才是正确的人生活法？每个人都需要在这茫茫的黑夜中，寻找一个存在的意义，为道德观，婚姻观，品格作支撑。
+有时候我会对太阳哭泣，哀求着灼伤我吧。如果你灼伤我，至少能让我感受到你的存在，以后就向你而生。然而你总是静默无言。
+
+太阳真的存在吗，如果那太阳是虚假的，什么才是正确的人生活法？每个人都需要在这茫茫的黑夜中，寻找一个存在的意义，为道德观，婚姻观，品格作支撑。
 
 思考这些问题真是孤独和绝望，但是我想再次勉强自己站起来去查验。
-
-如果它真的存在，将来有一天，当我再次向它而生时，我希望是因为看到了它的光辉，而不是对黑暗感到恐惧。
 
 ## 我准备如何探寻真理
 
@@ -123,19 +123,21 @@ tags:
 
 我也要去翻翻哲学和神学的书籍，读康德，克尔凯郭尔等等，看他们如何批判宗教又是如何护教。
 
-我也会再次去看看新无神论的书籍 《自私的基因》《机器人叛乱》，他们既然宣扬虚无主义，又要如何解决虚无主义导致的道德真空呢。
+我也会再次去看看新无神论的书籍 《自私的基因》《机器人叛乱》以及反基督教四君子的各种书籍。他们既然宣扬虚无主义，又要如何解决虚无主义导致的道德真空呢，真是悖论。
 
 我也会看古典的无神论的书籍，看看和新无神论有什么区别。
 
 我要提防什么呢？
 
-有些房子地基如何，有没有可能是盖在沙土上，偶尔有个地震，就全部倒塌了。
+别人家房子地基如何，有没有可能是盖在沙土上，偶尔有个地震，就全部倒塌了。
 
 房子的款式可能有很多，有些可能很流行，但并不是新鲜货。可能抄袭了100年前的结构，只是刷了个不一样的油漆罢了。
 
 这条探索之路的结局如何？
 
-结局可能是好的，也可能是不好的。一种可能是，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。糟糕的结局没有勇气自杀，苟且的活着，让忙碌淹没自己的胡思乱想。不过如果万事都毫无意义，结局也没有好坏之分了。
+结局可能是好的，也可能是不好的。一种可能是，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。如果耶稣是真理，将来有一天，当我再次向他而生时，我希望是因为看到了他的光辉，而不是对黑暗感到恐惧。
+
+坏的结局是苟且的活着，让忙碌淹没自己的胡思乱想。不过如果万事都毫无意义，结局也没有好坏之分了。
 
 我以后对自己的定位是一个基督教慕道友，而不是基督徒。当认清自己后，我反而轻松了许多，担子终究卸了下来，重新踏上真理探索之路了。
 
