--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -16,19 +16,17 @@ tags:
 
 婚姻辅导书籍《不再约会》的作者放弃了自己的基督教信仰；
 
-一些受洗见证讲的痛哭流涕的，在教会里寻不见踪影；
+一些受洗见证讲的痛哭流涕的，几个月后在教会就不见踪影；
 
-教会里一些性格乖戾的人，伤害别人也不以为意，对自己没有自知之明。
+一些行事乖戾的人，坚持自己才是正牌基督徒；
 
 我还听闻上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
 
 还在坚持的人，也有一些是稀里糊涂的跟着习惯在走。有些人来教会是一种习惯；有些人因为配偶；有些人是因为教会有家的温暖；有些人来是因为太孤独了，需要朋友。有些人是因为信基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。
 
-真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。
+真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。我也好不了多少，我得的是幻觉。我是因为害怕生命没有意义，才相信基督教，我需要基督教给我的人生重新赋予意义。
 
-有多少人是因为真理和道路？即使嘴上说渴慕真理，渴慕耶稣，心里就真的是渴慕吗？
-
-我就是那个不明白福音的人。我因为害怕生命没有意义，才相信基督教。
+我心里不爱耶稣，不懂福音，也没有被真理的光辉照亮。
 
 ## 检验自己的信仰
 
@@ -39,7 +37,7 @@ tags:
 - 好的性情，谦卑，温柔，怜悯
 - 等等。
 
-两本书在一大堆的清单之前，加了一个前置条件：对耶稣有爱慕之情。
+但在这一大长串清单之前，加了一个前置条件：对耶稣有爱慕之情。
 
 是啊，如果一个人真的相信自己是一无是处，罪行累累，该下到地狱里去，面对拯救者怎么会毫无感激之情。
 
@@ -51,19 +49,24 @@ tags:
 - 我相信《约伯记》中那个立定天地的神
 - 我相信《传道书》说人生虚无，毫无琢磨
 - 我相信《箴言书》中的人生智慧
-- 我相信门徒书信中散发出来的品格之美，怜悯，忍耐，包容，彼此相爱，诚实。但是很奇怪的是，我对他们信靠的基石耶稣基督，却无法坚信。
 - 我相信圣经中的道德光芒
+- 我相信门徒书信中散发出来的品格之美，怜悯，忍耐，包容，彼此相爱，诚实。但是很奇怪的是，我对他们的基石耶稣基督，却不认识。这太矛盾了。
 
 **我不确定的是**
 
 - 神会和人类互动吗？还是天地不仁，视万物为刍狗？
 - 如果会互动？哪个神才是正确的神？犹太教，基督教，伊斯兰教？
 - 怎么证明基督教的这个框架是正确无误的真理？ 我有罪，耶稣救赎我，得永生。
+- 如何证明？
 - 有没有永生？
+
+C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了一样：这并不只是因为我看见了它，而是因为通过它，我看见了一切事物。”
+
+但是为什么我就是看不到！
 
 **我想要的是什么？**
 
-首先是认清世界的实质是什么；其次是基于世界的实质去过自己的一生。
+基于事实去过自己的一生。
 
 如果世界的实质是虚无的，没有神，一切皆无意义，”物竞天择，适者生存“，“道德是种群的一种互相帮助策略”，那要在虚无中选择一套的人生活法。（反驳自己：如果人世间一切毫无意义，良善和邪恶都是被允许的。你为什么要坚持道德。）
 
@@ -75,7 +78,7 @@ tags:
 
 活在一种幻想中，自欺欺人。
 
-不道德的生活。（驳斥自己：但是如果道德也是相对的，道德和不道德又有什么区别呢？）
+过不道德的生活。（驳斥自己：但是如果道德也是相对的，道德和不道德又有什么区别呢？）
 
 
 ## 我过去为什么不愿意质疑自己的信仰？
