--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -78,7 +78,7 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 活在一种幻想中，自欺欺人。
 
-过不道德的生活。（驳斥自己：但是如果道德也是相对的，道德和不道德又有什么区别呢？）
+过不道德的生活。（驳斥自己：但是如果道德也是相对的，道德和败坏又有何分别呢。）
 
 
 ## 我过去为什么不愿意质疑自己的信仰？
