--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -171,3 +171,7 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 真理的光芒构建了人生观和价值观，然后自然带出行为。
 
 我的服侍没办法超过神对我的光照程度。
+
+**有人说 “有很多传道人可歌可泣的故事，他们为主摆上，他们的品格是何等高尚。”**
+
+这种故事并不会激励到我。我先要确信我的信仰是对的，是真理，然后才能all-in。
