--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -45,19 +45,24 @@ tags:
 
 **扪心自问，那我信的是什么呢？**
 
-- 我相信自然界有个伟大的创造者
-- 我相信《约伯记》中那个立定天地的神
-- 我相信《传道书》说人生虚无，毫无琢磨
-- 我相信《箴言书》中的人生智慧
-- 我相信圣经中的道德光芒
-- 我相信门徒书信中散发出来的品格之美，怜悯，忍耐，包容，彼此相爱，诚实。但是很奇怪的是，我对他们的基石耶稣基督，却不认识。这太矛盾了。
+我相信自然界有个伟大的创造者。
+
+我相信《约伯记》中那个立定天地的神。
+
+我相信《传道书》说人生虚无，无法琢磨。
+
+我相信《箴言书》中的人生智慧。
+
+我相信圣经中的道德光芒。
+
+我相信门徒书信中散发出来的品格之美，怜悯，忍耐，包容，彼此相爱，诚实。但是很奇怪的是，我对他们的基石耶稣基督，却不认识。这太矛盾了。
 
 **我不确定的是**
 
 - 神会和人类互动吗？还是天地不仁，视万物为刍狗？
 - 如果会互动？哪个神才是正确的神？犹太教，基督教，伊斯兰教？
-- 怎么证明基督教的这个框架是正确无误的真理？ 我有罪，耶稣救赎我，得永生。
-- 如何证明？
+- 我为什么要接受基督教的框架？ 我有罪，耶稣救赎我，得永生。
+- 如何证明基督教的框架是准确无误的？
 - 有没有永生？
 
 C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了一样：这并不只是因为我看见了它，而是因为通过它，我看见了一切事物。”
@@ -66,7 +71,7 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 **我想要的是什么？**
 
-基于事实去过自己的一生。
+基于事实去渡过一生。
 
 如果世界的实质是虚无的，没有神，一切皆无意义，”物竞天择，适者生存“，“道德是种群的一种互相帮助策略”，那要在虚无中选择一套的人生活法。（反驳自己：如果人世间一切毫无意义，良善和邪恶都是被允许的。你为什么要坚持道德。）
 
@@ -120,7 +125,7 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 我要怎么盖新房子呢？
 
-我会去参观一下别人的房子，有几层，内部装潢如何，地基是建造哪些磐石上。
+我会去参观一下别人的房子，有几层，内部装潢如何，地基是建造在哪里。
 
 我要去翻翻《佛经》《古兰经》去了解各种信仰。不管是得势的，还是不得势的。是流行的，还是过时的。
 
@@ -132,13 +137,13 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 我要提防什么呢？
 
-别人家房子地基如何，有没有可能是盖在沙土上，偶尔有个地震，就全部倒塌了。
+其他房子地基如何，有没有可能是盖在沙土上，偶尔有个地震，就全部倒塌了。
 
 房子的款式可能有很多，有些可能很流行，但并不是新鲜货。可能抄袭了100年前的结构，只是刷了个不一样的油漆罢了。
 
 这条探索之路的结局如何？
 
-结局可能是好的，也可能是不好的。一种可能是，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。如果耶稣是真理，将来有一天，当我再次向他而生时，我希望是因为看到了他的光辉，而不是对黑暗感到恐惧。
+结局可能是好的，最终发现旧房子就是建立在真理之上，那我就开心住在里面，一生都不需要搬家了。如果耶稣是真理，将来有一天，当我再次向他而生时，我希望是因为看到了他的光辉，而不是对黑暗感到恐惧。
 
 坏的结局是苟且的活着，让忙碌淹没自己的胡思乱想。不过如果万事都毫无意义，结局也没有好坏之分了。
 
