--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -179,9 +179,9 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 **是因为灯塔教会没有意象（vision），所以你才这样迷茫吗？**
 
-这些问题是个人决定，和灯塔意象无关。我对意象也毫无兴趣，如果我确信是个基督徒，也是想平静的按照圣经过好每一天，而不是把基督教当作一项伟大的事业。
+这些问题是个人困惑，和灯塔教会无关。我对意象也毫无兴趣，如果我确信是个基督徒，也是想平静的按照圣经过好每一天，而不是把基督教当作一项伟大的事业。
 
-**有人说 “有很多传道人可歌可泣的故事，他们为主摆上，他们的品格是何等高尚。”**
+**有很多传道人可歌可泣的故事，他们为主摆上，我们也要以他们为榜样。**
 
 这种故事并不会激励到我。我先要确信我的信仰是对的，是真理，然后才能 all-in。
 
