--- a/_posts/2019-12-16-plan-for-2020.md
+++ b/_posts/2019-12-16-plan-for-2020.md
@@ -89,8 +89,8 @@ tags:
 - week43 ✔️《诗篇》 1111010 Pray 1111111 ，读完杂书《意义的惊现》 1111001。
 - week44 ✔️ 箴言 +2 传道书 +1 诗篇 +1 基督教与世界宗教+1 Pray +5
 - week45 🔴 天太冷了，起不了床，就2天起来读圣经了。
-- week46(WIP) 《耶稣真貌》+2 Pray +2
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 《耶稣真貌》+2 Pray +2
+- week47(WIP)
 - week48
 - week49
 - week50
@@ -154,8 +154,8 @@ tags:
 - week43 ✔️ 锻炼 0🏃0000🥏 \|  早睡 1010001 \| 早起 1111011 \|  站立办公1小时 11111 \| 颈椎推拿 1010111 \| 跑步教材学习 0000000 \| 鱼油一粒 1111111 \| 一杯水 1111111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 10111
 - week44 🔴 锻炼 00000🏃 \|  早睡 1110000  \| 早起 01001 \|  站立办公1小时 11111 \| 颈椎推拿 11000 \| 跑步教材学习 00000 \| 鱼油一粒 111111 \| 一杯水 110111 \| 工作50分钟休息10分钟 11110 \| 饭后漱口 11111 \| 吃饭要慢(>15分钟) 11111 \| 晚上吃素 01100
 - week45 🔴 锻炼 00R  \|  早睡 000 \| 早起 0000  本周最大的挑战，天越来越冷，早晨六点压根起不来。放个大的羽绒服在床边，起床后不要脱睡衣，直接裹上羽绒服。
-- week46(WIP) 锻炼 0R \|  早睡 10  \| 早起 11 \|  站立办公1小时 11 \| 颈椎推拿 01 \| 跑步教材学习 00 \| 鱼油一粒 11 \| 一杯水 11 \| 工作50分钟休息10分钟 1 \| 饭后漱口 11 \| 吃饭要慢(>15分钟) 1 \| 晚上吃素 10
-- week47 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
+- week46 心境差，做什么事情都提不起劲来，也不想反思和复盘。
+- week47(WIP) 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week48 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week49 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素
 - week50 锻炼  \|  早睡  \| 早起 \|  站立办公1小时 \| 颈椎推拿 \| 跑步教材学习 \| 鱼油一粒 \| 一杯水 \| 工作50分钟休息10分钟 \| 饭后漱口 \| 吃饭要慢(>15分钟) \| 晚上吃素 
@@ -179,8 +179,8 @@ B: badminton
 - week43 Love action 11101  \| Love words 10100 \| 亲密的身体接触 10100 \| 意识到并且感谢妻子的付出 00000
 - week44 ✔️ Love action 1111101  \| Love words 000000 \| 亲密的身体接触 0001101 \| 意识到并且感谢妻子的付出 000000
 - week45 我一开车就变成一个乱发脾气的怪兽了，让她闭嘴，他很生气。得想办法解决这个问题。
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -198,8 +198,8 @@ B: badminton
 - week43 🔴 101
 - week44 ✔️ 111
 - week45 🔴 1
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -234,8 +234,8 @@ B: badminton
 - week43 收拾碗筷 \| 扔垃圾
 - week44 ✔️ 扔垃圾两次/收拾盘子 （这周阿姨扔垃圾次数太多了，下周要提醒阿姨交给沐沐）
 - week45 🔴
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -263,8 +263,8 @@ B: badminton
 - week43 ✔️ 叽里呱啦/洪恩英语/youtube kids 11 \| 外教到家授课 0101000 \| 购买外教老师推荐的 Farfaria 50美元
 - week44 ✔️ YouTube Kids +7, Farfaria +1, 洪恩英语 Panda
 - week45 ✔️ YouTube Kids +7, 叽里呱啦 +1, Khan Academy +2
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -300,8 +300,8 @@ B: badminton
 - week43 
 - week44 认识新字： 台，视 复习：窗，间，饿
 - week45 🔴 没怎么学汉字
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -329,8 +329,8 @@ B: badminton
 - week43 
 - week44 ✔️ Khan Academy big/small
 - week45 🔴 这周没学数学
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -359,8 +359,8 @@ B: badminton
 - week43 周三去万科卖竹蜻蜓，下雨了，啥也没卖出去
 - week44 毫无进展
 - week45 
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -408,8 +408,8 @@ B: badminton
 - week43 ✔️ 和奶奶聊了聊天，她说爷爷喜欢吃排骨。以后每个月京东买点寄回去。 \| 我妈又抱怨我姑姑的懒惰了。两个人真是让人疲倦。一个心胸狭窄，一个成年巨婴。
 - week44 ✔️ 周日给爸爸妈妈打电话。但是忘记给奶奶打电话了，周一再打吧。
 - week45 ✔️ 和爸爸打电话了，没有和奶奶打电话。
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -513,8 +513,8 @@ B: badminton
 - week43 1111110
 - week44 ✔️ 1101110
 - week45 
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -571,8 +571,8 @@ B: badminton
 - week43 ✔️ talk with Daniel / Vincent 
 - week44✔️ Talk with Daniel / Vincent / Daniel
 - week45 ✔️
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -625,8 +625,8 @@ B: badminton
 - week43 ✔️ Review VPC / Learn Disaster Recovery / Learn IAM again
 - week44 ✔️ SNS fanout / Kinesis / Play IAM policy in the wild.
 - week45 🔴 No Progress
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -676,8 +676,8 @@ B: badminton
 - week43 🔴 expected no progress
 - week44 🔴 expected no progress
 - week45 🔴 expected no progress
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -736,8 +736,8 @@ B: badminton
 - week43 Performance tuning
 - week44 fix a calendar bug / discuss microservice / look for an office.
 - week45 fix calendar bug / HIREtech integration / Help new engineer on board
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -786,8 +786,8 @@ B: badminton
 - week43 邀请 Ta 来家里吃饭。 \| talk with them
 - week44 No progress.
 - week45 
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
@@ -856,8 +856,8 @@ B: badminton
 - week43 向文因为工作的事情心情不太好。
 - week44 🔴 晚上要面试别人，和祷告会冲突，这周取消
 - week45 🔴
-- week46(WIP) 
-- week47
+- week46 （心境差，做什么事情都提不起劲来，也不想反思和复盘。） 
+- week47(WIP)
 - week48
 - week49
 - week50 
