--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -10,6 +10,8 @@ tags:
 
 我在教会已经有八年了，在这个过程中经历了形形色色的事情。
 
+对自己信仰笃信无疑的人，放弃自己的基督教信仰了。
+
 曾经一起服侍的小组同工，有一天对我说他不再相信基督教了；
 
 一些大学团契的领袖毕业后，就再也没有在教会里出现过；
@@ -18,13 +20,15 @@ tags:
 
 一些受洗见证讲的痛哭流涕的，几个月后在教会就不见踪影；
 
-一些行事乖戾的人，坚持自己才是正牌基督徒；
+那些还在教会的坚持的人，也是各有所求。有些人来教会是一种习惯；有些人因为配偶；有些人是因为教会有家的温暖；有些人来是因为太孤独了，需要朋友；有些人是因为信基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。有些人因为基督教劝人向善很，可以做个好人。
 
-我还听闻上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
+所以当他们做出一些惊愕的事情时，也不再奇怪了。
 
-还在坚持的人，也有一些是稀里糊涂的跟着习惯在走。有些人来教会是一种习惯；有些人因为配偶；有些人是因为教会有家的温暖；有些人来是因为太孤独了，需要朋友。有些人是因为信基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。
+一些行事乖戾的人，坚持自己才是正牌基督徒，对自己的邪恶毫无自知之明；
 
-真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。我也好不了多少，我得的是幻觉。我是因为害怕生命没有意义，才相信基督教，我需要基督教给我的人生重新赋予意义。
+上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
+
+信仰的真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。我也好不了多少，我得的是幻觉。我是因为害怕生命没有意义，才相信基督教，我需要基督教给我的人生重新赋予意义。
 
 我心里不爱耶稣，不懂福音，也没有被真理的光辉照亮。
 
@@ -47,6 +51,8 @@ tags:
 
 我相信自然界有个伟大的创造者。
 
+我相信我是蝼蚁。
+
 我相信《约伯记》中那个立定天地的神。
 
 我相信《传道书》说人生虚无，无法琢磨。
@@ -55,7 +61,9 @@ tags:
 
 我相信圣经中的道德光芒。
 
-我相信门徒书信中散发出来的品格之美，怜悯，忍耐，包容，彼此相爱，诚实。但是很奇怪的是，我对他们的基石耶稣基督，却不认识。这太矛盾了。
+我相信门徒书信中散发出来的品格之美，怜悯，忍耐，包容，彼此相爱，诚实。
+
+但是很奇怪的是，我对他们的基石耶稣基督，却不认识。这太矛盾了。
 
 **我不确定的是**
 
@@ -71,11 +79,13 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 **我想要的是什么？**
 
-基于事实去渡过一生。
+我想要真理，并且基于真理去度过一生。
 
-如果世界的实质是虚无的，没有神，一切皆无意义，”物竞天择，适者生存“，“道德是种群的一种互相帮助策略”，那要在虚无中选择一套的人生活法。（反驳自己：如果人世间一切毫无意义，良善和邪恶都是被允许的。你为什么要坚持道德。）
+如果我要把时间观，价值观，金钱观，人际关系都构建在一个地基上，这个地基的真伪，对于我很重要。我宁可舍弃财富，荣华，事业，快乐，也要对真理的认识。
 
-如果真理是，神造了天地之后，就不管我们了，那么我们就为自己创造一个意义，然后用那个意义过完此生。
+如果世界的实质是虚无的，没有神，一切皆无意义，”物竞天择，适者生存“，“道德是种群的一种互相帮助策略”，那要在虚无中创造一个意义，并以此活着。（反驳自己：如果人世间一切毫无意义，良善和邪恶都是被允许的。你为什么要坚持道德。）
+
+如果真理是，神造了天地之后，就不管我们了，那我就不再苦苦哀求了。
 
 如果真理是基督教的理论，我就按基督教过这一生，做符合真理的事情。
 
@@ -181,7 +191,9 @@ C. S.路易斯说“我相信基督教，正如我相信太阳已经升上来了
 
 这些问题是个人困惑，和灯塔教会无关。我对意象也毫无兴趣，如果我确信是个基督徒，也是想平静的按照圣经过好每一天，而不是把基督教当作一项伟大的事业。
 
-**有很多传道人可歌可泣的故事，他们为主摆上，我们也要以他们为榜样。**
+**有很多传道人殉道，难道有人会为假的信念去死？**
+
+真理可以让人为之去死，但是为之去死的未必会是真理。历史上因为邪教而死的人还少吗。
 
 这种故事并不会激励到我。我先要确信我的信仰是对的，是真理，然后才能 all-in。
 
