--- a/_posts/2020-11-14-domar.md
+++ b/_posts/2020-11-14-domar.md
@@ -8,29 +8,30 @@ tags:
   -
 ---
 
-我在教会已经有八年了，在这个过程中经历了形形色色的事情。
+我在教会已经有八年了，期间经历了一堆惊愕的事情。
 
-对自己信仰笃信无疑的人，放弃自己的基督教信仰了。
+隔壁教会有个“弟兄”在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈，然后怒不可竭，威胁要去公安部门揭发自己的教会。
 
-曾经一起服侍的小组同工，有一天对我说他不再相信基督教了；
+有人行事行事乖戾，不以自己的邪恶为耻，反以暴露邪恶为“诚实”。
 
-一些大学团契的领袖毕业后，就再也没有在教会里出现过；
+有人终日批评别人，却不愿意接受一点点批评。
 
-婚姻辅导书籍《不再约会》的作者放弃了自己的基督教信仰；
+有人终日吹毛求疵，不知感恩。
 
-一些受洗见证讲的痛哭流涕的，几个月后在教会就不见踪影；
+有人随便伤害别人，自己确是个玻璃心，不能忍受一丁点来自别人的伤害。
 
-那些还在教会的坚持的人，也是各有所求。有些人来教会是一种习惯；有些人因为配偶；有些人是因为教会有家的温暖；有些人来是因为太孤独了，需要朋友；有些人是因为信基督教在世界的舞台上占统治地位，是最符合时代潮流的宗教。有些人因为基督教劝人向善很，可以做个好人。
+一大堆对自己信仰笃信无疑的人放弃自己的基督教信仰。曾经一起服侍的小组同工离开了教会；一些大学团契的领袖毕业后，就人间蒸发了；婚姻辅导书籍《不再约会》的作者离婚了；一些受洗见证讲的痛哭流涕的重生者，几个月后在教会就不见踪影。
 
-所以当他们做出一些惊愕的事情时，也不再奇怪了。
+有些人还在坚持来教会，可能是因为习惯，也可能因为配偶的命令，有些人来是因为太孤独了，需要朋友；有些人是因为信基督教很时尚。有些人因为基督教劝人向善很，可以做个好人。
 
-一些行事乖戾的人，坚持自己才是正牌基督徒，对自己的邪恶毫无自知之明；
+信仰的真和假对于一些人并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。
 
-上海某教会有个男性基督徒在追求一位女性基督徒时被拒绝，他依然穷追不舍，被牧师约谈。然后怒不可竭，威胁要去公安部门揭发自己的教会。
+现在我也把灵魂放到解剖台上时，我为什么信基督教？
 
-信仰的真和假对于他们或许并没有这么重要，只要能得安慰，得朋友，得温暖，得社交就可以了。我也好不了多少，我得的是幻觉。我是因为害怕生命没有意义，才相信基督教，我需要基督教给我的人生重新赋予意义。
+我害怕生命没有意义，我需要基督教赋予我人生的意义。
 
-我心里不爱耶稣，不懂福音，也没有被真理的光辉照亮。
+但我心里不爱耶稣，不懂福音，也没有被真理的光辉照亮。哎，自欺的人啊。
+
 
 ## 检验自己的信仰
 
